trilium-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trilium
  namespace: trilium
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: trilium.jeffriffle.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trilium
            port:
              number: 8080
  tls:
  - hosts:
    - trilium.jeffriffle.com
    secretName: tls-trilium
